--- a/src/templates/config.old.html
+++ b/src/templates/config.old.html
@@ -1,7 +1,7 @@
 <div class="config">
   <div class="titlebar">Configuration</div>
 
-  <form id="configForm" data-ng-init="connect()" ng-submit="connect()" name="configForm" novalidate>
+  <form ng-submit="connect()" name="configForm" novalidate>
     <div class="control-group">
       <label for="server">Server:</label>
       <input type="text" name="server" id="server"
